--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.13.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^0.0.0",
     "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1"
   },
