--- a/package.json
+++ b/package.json
@@ -1,115 +1,41 @@
 {
- 
   "version": "1.0.0",
- 
   "private": true,
- 
-  "homepage": "/",
-
- 
+  "homepage": "https://thatipallyvinodkumar167.github.io/Physiotattva/",
   "dependencies": {
- 
-   
-  "@emotion/react": "^11.14.0",
- 
-   
-  "@emotion/styled": "^11.14.1",
- 
-   
-  "@mui/icons-material": "^7.3.7",
- 
-   
-  "@mui/material": "^7.3.7",
- 
-   
-  "framer-motion": "^12.29.2",
- 
-   
-  "react": "^18.2.0",
- 
-   
-  "react-dom": "^18.2.0",
- 
-   
-  "react-router-dom": "^7.13.0",
- 
-   
-  "react-scripts": "^5.0.1",
- 
-   
-  "react-slick": "^0.31.0",
- 
-   
-  "slick-carousel": "^1.8.1"
- 
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.7",
+    "@mui/material": "^7.3.7",
+    "framer-motion": "^12.29.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.13.0",
+    "react-scripts": "^5.0.1",
+    "react-slick": "^0.31.0",
+    "slick-carousel": "^1.8.1"
   },
- 
   "scripts": {
- 
-   
-  "start": "react-scripts start",
- 
-   
-  "build": "react-scripts build",
- 
-   
-  "predeploy": "npm run build",
- 
-   
-  "deploy": "gh-pages -d build",
- 
-   
-  "test": "react-scripts test",
- 
-   
-  "eject": "react-scripts eject"
- 
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
- 
   "browserslist": {
- 
-   
-  "production": [
- 
-   
-   
-  ">0.2%",
- 
-   
-   
-  "not dead",
- 
-   
-   
-  "not op_mini all"
- 
-   
-  ],
- 
-   
-  "development": [
- 
-   
-   
-  "last 1 chrome version",
- 
-   
-   
-  "last 1 firefox version",
- 
-   
-   
-  "last 1 safari version"
- 
-   
-  ]
- 
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
- 
   "devDependencies": {
- 
-   
-  "gh-pages": "^6.3.0"
- 
+    "gh-pages": "^6.3.0"
   }
 }
