--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "version": "1.0.0",
   "private": true,
-  "homepage": "https://thatipallyvinodkumar167.github.io/Physiotattva/",
+  "homepage": "/",
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
